# dramatiq-postgres

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  README.rst  docker-compose.yml  example.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: Makefile  api.rst  changelog.rst  deployment-guide.rst  get-started.rst  index.rst  user-guide.rst  why.rst
dramatiq_pg/: broker.py  cli.py  results.py  schema.py  schema.sql  utils.py
dramatiq_postgres/: __init__.py  broker.py  cli.py  results.py  schema.py  schema.sql  utils.py
dramatiq_postgres/django/: __init__.py  apps.py  worker.py
dramatiq_postgres/django/migrations/: 0001_initial.py
tests/: .gitignore  conftest.py  perf.py  perfagg.py  postgresql-conf.sh  pypsql
tests/func/: .docker-history  conftest.py  docker-compose.yml  entrypoint.sh  example.py  schema.sql  test_broker.py  test_cli.py  test_django.py  test_results.py  test_unit.py  test_utils.py
tests/unit/: test_broker.py  test_schema.py  test_utils.py
typings/psycopg2/: __init__.pyi
