[tool.poetry]
name = "dramatiq-pg"
version = "0.1.0"
description = "Postgres Broker for Dramatiq Task Queue"
authors = ["Étienne BERSAC"]
homepage = "https://gitlab.com/dalibo/dramatiq-pg"
license = "PostgreSQL"
readme = "README.rst"
keywords = ["postgres", "task queue", "dramatiq"]
include = ["dramatiq-pg/schema.sql"]

[tool.poetry.dependencies]
python = "^3.5"
dramatiq = "^1.5"
psycopg2 = "^2.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^4.3"
pytest-timeout = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
