[project]
name = "dramatiq-postgres"
version = "2.0.0"
description = "Postgres Broker for Dramatiq Task Queue"
authors = [
    { name = "Daniel Gatis", email = "danielgatis@gmail.com" },
]
license = "MIT"
readme = "README.md"
keywords = ["postgres", "task queue", "dramatiq"]
requires-python = ">=3.10"
dependencies = [
    "dramatiq>=2,<3",
    "psycopg[pool]>=3.2,<4",
    "tenacity>=8,<10",
]

[project.optional-dependencies]
django = [
    "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/danielgatis/dramatiq-postgres"

[project.scripts]
dramatiq-postgres = "dramatiq_postgres.cli:entrypoint"

[dependency-groups]
dev = [
    "black",
    "django>=4.2",
    "mypy>=2.3.0",
    "psycopg[binary]>=3.2,<4",
    "pytest>=9.0.3",
    "pytest-mock",
    "pytest-timeout",
    "ruff",
    "sh>=2.2.4",
    "testcontainers>=4,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dramatiq_postgres"]

[tool.pytest.ini_options]
addopts = "-vvv --strict-markers --showlocals"
xfail_strict = true
filterwarnings = [
    # sh forks from pytest's multi-threaded process; harmless for these
    # short-lived CLI invocations and not fixable from here.
    "ignore:This process.*is multi-threaded, use of fork:DeprecationWarning",
]

[tool.mypy]
files = ["dramatiq_postgres", "tests"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# No py.typed / stubs published; django-stubs requires a settings module,
# which a reusable app cannot provide.
module = ["django.*", "sh", "testcontainers.*"]
ignore_missing_imports = true

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]
